Fixed layout issues on Submissions page: improved spacing, structure, and visual alignment (#350)

--- a/submission.css
+++ b/submission.css
@@ -85,11 +85,28 @@ nav {
 }
 
 .text-box1 h1 {
-  margin-top: 15px;
+  margin-top: 50px;
   font-weight: 700;
   font-style: italic;
   font-size: 62px;
+  margin-bottom: 10px;
 }
+.text-box1 h2 {
+  margin-bottom: 20px; 
+  margin-top: 20px;
+}
+.text-box1 h3 {
+  margin-bottom: 40px; 
+  color: #111717;
+  font-size:22px;
+}
+.theme-heading{
+  margin-bottom:40px;
+}
+.submission-guidelines-wrapper{
+  margin-top:50px;
+}
+
 .text-box1 p {
   width: 100%;
   margin: 10px 0 40px;
